Fix: some controls are out of view port when zoom to 200%

--- a/packages/selenium-ide/src/neo/styles/app.css
+++ b/packages/selenium-ide/src/neo/styles/app.css
@@ -10,7 +10,7 @@
 }
 
 html {
-  overflow: hidden;
+  overflow: auto;
 }
 
 body {
